--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ED-IA Personal Agent</title>
-    <!-- usa il base URL di Vite -->
+    <!-- favicon servita dalla base del repo -->
     <link rel="icon" href="%BASE_URL%favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
-    <!-- main.jsx è IN ROOT, non in /src -->
+    <!-- main.jsx è in ROOT, NON in /src -->
     <script type="module" src="%BASE_URL%main.jsx"></script>
   </body>
 </html>
