--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="root"></div>
     <!-- entrypoint standard Vite -->
     <script type="module" src="/src/main.jsx"></script>
-    <!-- html2pdf.js vendorizzato localmente (v0.10.1) -->
-    <script src="%BASE_URL%vendor/html2pdf.bundle.min.js"></script>
+    <!-- html2pdf.js CDN for PDF generation -->
+    <script src="https://cdn.jsdelivr.net/npm/html2pdf.js@0.10.1/dist/html2pdf.bundle.min.js"></script>
   </body>
 </html>
